add font awesome

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       
     </style>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+          integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="myDiv">
@@ -19,6 +21,7 @@
         <h2>I built some amazing projects</h2>
         <button class="myBtn">SUBSCRIBE</button>
         <p title="Contains my projects" style="color: brown;">This is my Portfolio</p>
+        
     </div>
     <!-- images
     local -->
@@ -30,6 +33,7 @@
 
     <!-- link -->
     <a href="http://www.twitter.com">twitter</a>
+    <i class="fa-brands fa-twitter"></i>
 
     <!-- hyperlink -->
     <a href="about.html">about</a>
