add text shadow and box shadow

--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 </head>
 <body>
     <div id="myDiv">
-        <h1>My software engineering journey</h1>
-        <h2>I built some amazing projects</h2>
-        <button class="myBtn">SUBSCRIBE</button>
-        <p title="Contains my projects" style="color: brown;">This is my Portfolio</p>
-        
+      <div id="boxShadow">
+
+      </div>              
+      <h1>My software engineering journey</h1>
+      <h2>I built some amazing projects</h2>
+      <button class="myBtn">SUBSCRIBE</button>
+      <p title="Contains my projects" style="color: brown;">This is my Portfolio</p> 
     </div>
+    <div >
+      <h1 id="textShadow" > Moses Waweru</h1>
+    </div>
+
     <!-- images
     local -->
     <img src="images/joey-chacon-WbWxuFhDmvw-unsplash.jpg" width="200" height="200" alt="my car">
@@ -63,10 +69,6 @@
 
 
     <form action=""></form>
-
-
-
-
 
 
     <script src="file.js"></script>
