--- a/index.html
+++ b/index.html
@@ -75,3 +75,6 @@
     
 </body>
 </html>
+
+<!-- inheritance - some properties eg typography can 
+  be inherited by the child from parent while layout cannot -->
