refactor: nav to section

--- a/grid.html
+++ b/grid.html
@@ -9,7 +9,7 @@
 <body>
   <section class="container">
     <header class="s">Header</header>
-    <nav class="s">Navbar</nav>
+    <section class="s">Section</section>
     <main class="s">Main</main>
     <aside class="s">Aside</aside>
     <footer class="s">Footer</footer>
