--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div id="boxShadow">
 
       </div>              
-      <h1>My software engineering journey</h1>
-      <h2>I built some amazing projects</h2>
+      <h1 class="heading1">My software engineering journey</h1>
+      <h2 class="heading2">I built some amazing projects</h2>
       <button class="myBtn">SUBSCRIBE</button>
       <p title="Contains my projects" style="color: brown;">This is my Portfolio</p> 
     </div>
