--- a/flex.html
+++ b/flex.html
@@ -11,24 +11,10 @@
     <!-- (div.child{$})*5 -->
     <div class="child">1</div>
     <div class="child">2</div>
-    <div class="child">3</div>
-    <div class="child">4</div>
+    <div class="child special">3</div>
+    <div class="child special-two">4</div>
     <div class="child">5</div>
-    <div class="child">1</div>
-    <div class="child">2</div>
-    <div class="child">3</div>
-    <div class="child">4</div>
-    <div class="child">5</div>
-    <div class="child">1</div>
-    <div class="child">2</div>
-    <div class="child">3</div>
-    <div class="child">4</div>
-    <div class="child">5</div>
-    <div class="child">1</div>
-    <div class="child">2</div>
-    <div class="child">3</div>
-    <div class="child">4</div>
-    <div class="child">5</div>
+    
     
   </section>
   
