add coffee landing page

--- a/coffee-page/index.html
+++ b/coffee-page/index.html
@@ -18,6 +18,111 @@
     </ul>
   </nav>
 
+  <!-- Header -->
+  <header class="header">
+    <h1 class="main-heading">START YOUR DAY</h1>
+    <h1 class="primary-heading">WITH A COFFEE</h1>
+    <button class="main-btn">Shop Now</button>
+  </header>
+
+  <!-- our story -->
+  <section id="our-story">
+    <div class="img-container">
+      <div class="img"></div>
+    </div>
+    <div class="section-content">
+      <div class="title-style">
+        <span class="line"></span>
+        <h1 class="title">Our Story</h1>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, illo vitae in inventore vel eveniet accusamus beatae, recusandae hic nisi praesentium maxime necessitatibus, sint optio aperiam! Repellendus blanditiis in quod?</p>
+      <button>Learn more</button>
+    </div>
+  </section>
+
+  <!-- coffee section -->
+  <section class="coffee-container">
+    <div class="content-section">
+      <div class="title-style">
+        <h1 class="title-two">
+          Perfect Place <br>
+          To Enjoy Your <br> 
+          Coffee
+        </h1>
+      </div>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque tempore obcaecati quasi optio provident voluptas laboriosam corporis illo maiores, distinctio aut laudantium consequuntur sapiente vero inventore numquam cum soluta deserunt?</p>
+      <button style="margin-top: 20px;">Learn more</button>
+    </div>
+    <section class="img-container">
+      <img src="images/2.png" class="img-2">
+    </section>
+  </section>
+
+  <!--  Product-->
+  <section class="product">
+    <h1 class="title title-three">Products</h1>
+    <section class="cards">
+      <div class="card">
+        <div class="card-img img-one"></div>
+        <div class="card-title">
+          <h1>Mocha</h1>
+        </div>
+        <div class="items">
+          <p>Espresso</p>
+          <p>Chocolate</p>
+          <p>Steamed Milk</p>
+        </div>
+      </div>
+            <div class="card">
+        <div class="card-img img-two"></div>
+        <div class="card-title">
+          <h1>Mocha</h1>
+        </div>
+        <div class="items">
+          <p>Espresso</p>
+          <p>Chocolate</p>
+          <p>Steamed Milk</p>
+        </div>
+      </div>
+            <div class="card">
+        <div class="card-img img-three"></div>
+        <div class="card-title">
+          <h1>Mocha</h1>
+        </div>
+        <div class="items">
+          <p>Espresso</p>
+          <p>Chocolate</p>
+          <p>Steamed Milk</p>
+        </div>
+      </div>
+    </section>
+
+  </section>
+
+  <!-- footer -->
+  
+  <footer>
+    <div class="container">
+      <h1 class="heading-info">About<span> Us</span></h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit..</p>
+    </div>
+    <div class="container">
+      <h1 class="heading-info">Contact<span> Us</span></h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. .</p>
+    </div>
+    <div class="container">
+      <h1 class="heading-info">Openings<span> Hours</span></h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. .</p>
+    </div>
+    <p class="para">
+      Copyright @ 2024 WawerohDev | Provided by <span>WaweruDev</span>
+    </p>
+
+  </footer>
+
+
+
+
   
 </body>
 </html>
